# LetsFLUTssh

./: .editorconfig  .gitattributes  .gitguardian.yml  .gitignore  .gitmodules  .semgrepignore  CLAUDE.md  CONTRIBUTING.md  Makefile  PLAN.md  README.md  SECURITY.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml  sonar-project.properties
.claude/: settings.json
.claude/hooks/: format-dart.sh  gen-l10n.sh  pre-commit-check.sh  session-start.sh
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: SECURITY.md  actionlint.yaml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: auto-tag.yml  build-release.yml  build.yml  cfl-fuzz.yml  ci-auto-tag.yml  ci-skip.yml  ci-sonarcloud.yml  ci.yml  codeql.yml  dependabot-auto.yml  dependabot-automerge.yml  dependabot-release.yml  dependabot-tag.yml  osv-scanner.yml  osv.yml  pages.yml  release.yml  scorecard.yml  security-codeql.yml  security-osv.yml  security-scorecard.yml  security-semgrep.yml  semgrep.yml  sonarcloud.yml
android/app/: build.gradle.kts
docs/: ADDING_A_FEATURE.md  AGENT_RULES.md  ARCHITECTURE.md  CLAUDE_RULES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  FEATURE_BACKLOG.md  RUST_CORE_MIGRATION_PLAN.md  SECURITY.md  USER_GUIDE.md
docs/site/: config.js  index.html  lightbox.js  render.js  style.css
drift_schemas/: drift_schema_v1.json  drift_schema_v2.json  drift_schema_v3.json  drift_schema_v4.json
fuzz/: fuzz_json_parser.dart  fuzz_kdf_params.dart  fuzz_known_hosts.dart  fuzz_lfs_archive_header.dart  fuzz_uri_parser.dart
ios/Runner/: AppDelegate.swift  BackupExclusionPlugin.swift  ClipboardSecurePlugin.swift  HardwareVaultPlugin.swift  Info.plist  QrScannerController.swift  SecureTextPlugin.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: already_running_app.dart  app_toolbar.dart  deep_link_wiring.dart  global_error_dialog.dart  import_flow.dart  navigator_key.dart  security_dialog_prompter.dart  security_dialogs.dart  security_init_controller.dart  update_dialog_flow.dart
lib/core/: app_version.dart  shortcut_registry.dart
lib/l10n/: app_ar.arb  app_de.arb  app_en.arb  app_es.arb  app_fa.arb  app_fr.arb  app_hi.arb  app_id.arb  app_ja.arb  app_ko.arb  app_localizations.dart  app_localizations_ar.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fa.dart  app_localizations_fr.dart  app_localizations_hi.dart  app_localizations_id.dart  app_localizations_ja.dart  app_localizations_ko.dart  app_localizations_pt.dart  app_localizations_ru.dart  app_localizations_tr.dart  app_localizations_vi.dart  app_localizations_zh.dart  app_pt.arb  app_ru.arb  app_tr.arb  app_vi.arb  app_zh.arb
lib/providers/: auto_lock_provider.dart  broadcast_provider.dart  config_provider.dart  connection_provider.dart  first_launch_banner_provider.dart  key_provider.dart  locale_provider.dart  master_password_provider.dart  security_provider.dart  security_reinit_provider.dart  session_credential_cache_provider.dart  session_provider.dart  snippet_provider.dart  tag_provider.dart  theme_provider.dart  transfer_provider.dart  update_provider.dart  version_provider.dart
lib/theme/: app_theme.dart
lib/utils/: android_storage_permission.dart  file_utils.dart  format.dart  logger.dart  platform.dart  sanitize.dart  secret_controller.dart  terminal_clipboard.dart
lib/widgets/: app_bordered_box.dart  app_button.dart  app_collection_toolbar.dart  app_data_row.dart  app_data_search_bar.dart  app_dialog.dart  app_divider.dart  app_empty_state.dart  app_icon_button.dart  app_info_button.dart  app_info_dialog.dart  app_picker_chip.dart  app_popup_select.dart  app_selection_area.dart  app_shell.dart  auto_lock_detector.dart  clipped_row.dart  column_resize_handle.dart  confirm_dialog.dart  connection_progress.dart  context_menu.dart  cross_marquee_controller.dart  data_checkboxes.dart  db_corrupt_dialog.dart  dropdown_select_button.dart  error_state.dart  expandable_tier_card.dart  file_conflict_dialog.dart  first_launch_security_dialog.dart  first_launch_security_toast.dart  form_submit_chain.dart  host_key_dialog.dart  hover_region.dart  import_preview_dialog.dart  legacy_kdf_dialog.dart  lfs_import_dialog.dart  lfs_import_preview_dialog.dart  link_import_preview_dialog.dart  local_directory_picker.dart  lock_screen.dart  (+31 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/packaging/: letsflutssh.desktop
linux/runner/: CMakeLists.txt  my_application.cc  session_lock_plugin.cc  session_lock_plugin.h
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: BackupExclusionPlugin.swift  ClipboardSecurePlugin.swift  HardwareVaultPlugin.swift  MainFlutterWindow.swift  SecureTextPlugin.swift  SessionLockPlugin.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  deny.toml
rust/crates/lfs_core/: Cargo.toml
rust/crates/lfs_core/src/: app.rs  crypto.rs  error.rs  keys.rs  lib.rs  secrets.rs
rust/crates/lfs_core/src/db/: app_configs.rs  folders.rs  known_hosts.rs  mod.rs  port_forwards.rs  sessions.rs  sftp_bookmarks.rs  snippets.rs  ssh_keys.rs  tags.rs
rust/crates/lfs_core/src/sftp/: mod.rs
rust/crates/lfs_core/src/ssh/: mod.rs
rust/crates/lfs_frb/: Cargo.toml
rust/crates/lfs_frb/src/: api.rs  frb_generated.rs  lib.rs
rust/crates/lfs_frb/src/api/: app.rs  crypto.rs  db.rs  forward.rs  keys.rs  sftp.rs  ssh.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: lfs_frb.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: lfs_frb.podspec
scripts/: bump-version.sh  check-arb-parity.sh  filter-lcov.py  filter_lcov.dart  install-hooks.sh  macos-resign.sh
test/: flutter_test_config.dart  main_screen_additional_test.dart  main_screen_coverage_test.dart  main_screen_deep_coverage_test.dart  main_screen_max_coverage_test.dart  main_screen_test.dart  main_test.dart
windows/: CMakeLists.txt
(+599 files in other folders)
